First pass at new line / arrow drawing code that uses CSS Fixed a bug in the twoway jumppad detection and rebuilt markers

--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@ html, body, #map { width:100%; height:100%; margin:0; padding:0; z-index: 1; bac
 .found { opacity: 30%; }
 .hidden { visibility: hidden; }
 
-path { opacity: 50% }
-path.found {opacity: 100%}
+path { opacity: 100%; fill-opacity: 100%; filter: brightness(100%) }
+path.found {opacity: 100%; fill-opacity: 100%; filter: brightness(100%)}
 
 path[alt=''] { opacity: 100% }
 
@@ -81,26 +81,123 @@ path[alt=''] { opacity: 100% }
   word-wrap: break-word;
 }
 
+/* Jumppad line drawing */
 .line-jumppad {
-  stroke-width: 5;
+  --arrow-size: 10;    /* Arrow head size, if not set no arrow drawn, only used for long one way lines */
+  --arrow-angle: 40;   /* Angle arrow pointer will be drawn with */
+  --line-width: 6;    /* Width of the basic line */
+  --shadow-width: 5;  /* Width of shadow border */
+  --offset: 100%;     /* How far along line should first arrow appear, pixels also ok */
+  --end-offset: 0;    /* How far from end should last arrow appear */
+  --repeat: 1;        /* How many arrows should be drawn? */
+
+  stroke-width: var(--line-width);
+  opacity: 100%;        /* inherited by arrows and arrow shadows */
+  fill-opacity: 100%;   /* inherited by arrows and arrow shadows */
 }
-.line-jumppad-shadow {
-  stroke-width: 6;
+.line-jumppad.red {
+  stroke: #F00;
+  fill: #f00;         /* inherited by arrow */
+}
+.line-jumppad.blue {
+  stroke: #1E90FF;
+  fill: #1E90FF;      /* inherited by arrow */
+}
+.line-jumppad.shadow {
+  stroke:#000;
+  fill: #000;       /* inherited by shadow arrow */
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
+}
+.line-jumppad.red.arrow {
+}
+.line-jumppad.blue.arrow {
+}
+.line-jumppad.arrow.shadow {
+  stroke: #000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width) * 2 + var(--line-width));
 }
 
 .line-pipe {
-  stroke-width: 5;
+  --arrow-size: 5;
+  --arrow-angle: 40;
+  --line-width: 6;
+  --shadow-width: 5;
+  --offset: 100%;
+  --end-offset: 0;
+  --repeat: 1;
+
+  stroke-width: var(--line-width);
+  stroke: #4DFF00;
+  opacity: 100%;
+  fill-opacity: 100%;
 }
-.line-pipe-shadow {
-  stroke-width: 6;
+.line-pipe.shadow {
+  stroke:#000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
 }
+.line-pipe.arrow {
+}
+.line-pipe.arrow.shadow {
+  stroke: #000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
+}
+
 
 .line-player_aim {
-  stroke-width: 2;
+  --arrow-size: 5;
+  --arrow-angle: 40;
+  --line-width: 3;
+  --shadow-width: 0;
+  --offset: 100%;
+  --end-offset: 0;
+  --repeat: 1;
+
+  stroke-width: calc(var(--shadow-width) * 2 + var(--line-width));
+  stroke: #fff;
+  opacity: 100%;
+  fill-opacity: 100%;
 }
+/* .line-player_aim.shadow {
+  stroke:#000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
+}
+.line-player_aim.arrow {
+}
+.line-player_aim.arrow.shadow {
+  stroke: #000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
+}*/
+
 
 .line-trigger {
-  stroke-width: 5;
-  opacity: 50%;
-  fill-opacity: 50%;
+  --arrow-size: 5;
+  --arrow-angle: 40;
+  --line-width: 2;
+  --shadow-width: 0;
+  --offset: 100%;
+  --end-offset: 0;
+  --repeat: 1;
+
+  stroke-width: calc(var(--shadow-width) * 2 + var(--line-width));
+  stroke: #fff;
+  opacity: 100%;
+  fill-opacity: 100%;
 }
+/* .line-trigger.shadow {
+  stroke:#000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
+}
+.line-trigger.arrow {
+}
+.line-trigger.arrow.shadow {
+  stroke: #000;
+  fill: #000;
+  stroke-width: calc(var(--shadow-width)*2 + var(--line-width));
+}*/
+
